Updated the INSTALL.txt with valid intallation instructions, also fixed the forgotten BSD license still hanging around in there. :-) Setup hardwired credentials are now directly hardwired in TemplateManager::install()

--- a/INSTALL.txt
+++ b/INSTALL.txt
@@ -1,37 +1,21 @@
   
   Cintient, Continuous Integration made simple.
-  Copyright (c) 2011, Pedro Mata-Mouros Fonseca
-  All rights reserved.
-  
-  Redistribution and use in source and binary forms, with or without
-  modification, are permitted provided that the following conditions
-  are met:
-  
-  . Redistributions of source code must retain the above copyright
-    notice, this list of conditions and the following disclaimer.
-  
-  . Redistributions in binary form must reproduce the above
-    copyright notice, this list of conditions and the following
-    disclaimer in the documentation and/or other materials provided
-    with the distribution.
-    
-  . Neither the name of Pedro Mata-Mouros Fonseca, Cintient, nor
-    the names of its contributors may be used to endorse or promote
-    products derived from this software without specific prior
-    written permission.
-    
-  THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDER AND CONTRIBUTORS
-  AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
-  LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS
-  FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE
-  COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT,
-  INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING,
-  BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES;
-  LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER
-  CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT
-  LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN
-  ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
-  POSSIBILITY OF SUCH DAMAGE.
+  Copyright (c) 2010, 2011, Pedro Mata-Mouros Fonseca
+
+  This file is part of Cintient.
+
+  Cintient is free software: you can redistribute it and/or modify
+  it under the terms of the GNU General Public License as published by
+  the Free Software Foundation, either version 3 of the License, or
+  (at your option) any later version.
+
+  Cintient is distributed in the hope that it will be useful,
+  but WITHOUT ANY WARRANTY; without even the implied warranty of
+  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
+  GNU General Public License for more details.
+
+  You should have received a copy of the GNU General Public License
+  along with Cintient. If not, see <http://www.gnu.org/licenses/>.
 
 
 
@@ -47,13 +31,13 @@
    following for starters:
 
   <VirtualHost *:80>
-      DocumentRoot /servers/cintient/www
+      DocumentRoot /home/www/cintient/www
       ServerName cintient.localsite.com
-      ErrorLog /var/log/httpd.error
       RewriteEngine on
-      RewriteRule ^(?!/js/)(.*)$ /WebHandler.php [L]
-      php_value include_path /servers/cintient
-      <Directory "/servers/cintient/www">
+      RewriteRule ^/ajax/ /ajaxHandler.php [L]
+      RewriteRule ^(?!/js/)(?!/css/)(?!/imgs/)(?!/fonts/)(.*)$ /webHandler.php [L]
+      php_value include_path /home/www/cintient
+      <Directory "/home/www/cintient/www">
           Options FollowSymLinks
           AllowOverride FileInfo
           Order allow,deny
@@ -63,10 +47,10 @@
   
 2. As for PHP, no special configuration is required - for now!
 
-3. Open up src/config/config.php and change what you must - we still don't have
+3. Open up src/config/cintient.conf.php and change what you must - we still don't have
    an automatic process for this. Make sure pretty much all dirs specified there
    have the proper writing and execution permissions for your webserver process
-   that will be running Cintient. 
+   that will be running Cintient.
 
 4. Locate src/core/TemplateManager.php's method install() and within it make
    sure you specify your root account and password. This will be used for your
@@ -74,12 +58,12 @@
 
 
 [ STARTUP ]
-1. Access your configured vhost:
+1. Access your configured vhost with the "install" URI:
 
   http://cintient.localsite.com/install
 
   This starts up Cintient on your local setup, installs the database and sets
-  up the starting tables. You should only run this the first time 'round.
+  up the starting tables. You should only run this the *first time around*.
   
 2. Enter the platform with the credentials you provided in the install() method.
 
