--- a/CHANGELOG
+++ b/CHANGELOG
@@ -23,20 +23,21 @@
 
 
 
-CHANGELOG
+ 2011-09-05 cintient-0-alpha-5
+ =============================
 
-[ 2011-09-04 cintient-0-alpha-5 ]
-
-  ADDED: Notifo.com user account notifications, as well as an extendable
-         architecture for new notification handlers. Users can configure
-         available notification handlers and can configure per project
-         notifications for specific predetermined events.
-
-  FIXED: Installer is now compatible with PHP 4 and PHP 5.2.
-
-  FIXED: Several minor tweaks and improvements.
+ADDED: Notifo.com user account notifications, as well as an extendable
+       architecture for new notification handlers. Users can configure
+       available notification handlers and can configure per project
+       notifications for specific predetermined events.
+FIXED: Installer is now compatible with PHP 4 and PHP 5.2.
+FIXED: Integration builder issue would report success on certain cases
+       where tasks would generate a fatal error.
+FIXED: Several minor tweaks and improvements.
 
   
-[ 2011-08-19 cintient-0-alpha-4 ]
+  
+ 2011-08-19 cintient-0-alpha-4
+ =============================
 
-  FIXED: URL handling issues bug squashing.
+FIXED: URL handling issues bug squashing.
