Centralized the builder elements Fail On Error HTML generation. Added tooltips to some page elements, using the external lib Tip Tip jQuery plugin. Suppressed error output in the AJAX handler, for more robust error handling in the client side. New projects are created with an AJAX call, instead of the old form POST submission. Project delete operation, in the project edit section. Project notification settings for the user now available only if the user has write access to the project. Improved the project creation and edition forms. Improved the error handling of the Cintient JS framework's initGenericForm. Fixed an error when creating a Copy task for the integration builder.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -23,6 +23,14 @@
 
 
 
+ 2011-09-21 cintient-0-alpha-7
+ =============================
+
+ADDED: Git support as an SCM connector. Still very dodgy and alpha-ish.
+FIXED: Some minor bugs squashed.
+       
+       
+
  2011-09-13 cintient-0-alpha-6
  =============================
  
