Updated CHANGELOG to the latest release.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,62 +1,45 @@
+Changelog
+=========
 
-+----------------------------------------------------------------------+
-|                                                                      |
-| Cintient, Continuous Integration made simple.                        |
-| Copyright (c) 2010, 2011, Pedro Mata-Mouros Fonseca                  |
-|                                                                      |
-| This file is part of Cintient.                                       |
-|                                                                      |
-| Cintient is free software: you can redistribute it and/or modify     |
-| it under the terms of the GNU General Public License as published by |
-| the Free Software Foundation, either version 3 of the License, or    |
-| (at your option) any later version.                                  |
-|                                                                      |
-| Cintient is distributed in the hope that it will be useful,          |
-| but WITHOUT ANY WARRANTY; without even the implied warranty of       |
-| MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the         |
-| GNU General Public License for more details.                         |
-|                                                                      |
-| You should have received a copy of the GNU General Public License    |
-| along with Cintient. If not, see <http://www.gnu.org/licenses/>.     |
-|                                                                      |
-+----------------------------------------------------------------------+
+2011-10-02 cintient-0-alpha-8
+-----------------------------
+ *  FIXED: Major bugfixing and improvements.
+ *  ADDED: Tooltips to some forms. Still working on improving everything
+           with more information.
+ *  ADDED: ReplaceRegex task.
+ *  ADDED: Configuration file now generated at install time.
+ *  CHANG: Delete task now activated.
 
+2011-09-21 cintient-0-alpha-7
+-----------------------------
 
+ *  ADDED: Git support as an SCM connector. Still very dodgy and
+           alpha-ish.
+ *  FIXED: Some minor bugs squashed.
 
- 2011-09-21 cintient-0-alpha-7
- =============================
-
-ADDED: Git support as an SCM connector. Still very dodgy and alpha-ish.
-FIXED: Some minor bugs squashed.
-       
-       
-
- 2011-09-13 cintient-0-alpha-6
- =============================
+2011-09-13 cintient-0-alpha-6
+-----------------------------
  
-FIXED: LOTS of bugs squashed and performance issues (some quite SERIOUS)
-       fixed, either in the backend and frontend.
-FIXED: Serious Notification design flaw caused only the logged on user
-       to receive notifications, instead of all project registered
-       users.
+ *  FIXED: LOTS of bugs squashed and performance issues (some quite
+           SERIOUS) fixed, either in the backend and frontend.
+ *  FIXED: Serious Notification design flaw caused only the logged on
+           user to receive notifications, instead of all project
+           registered users.
 
+2011-09-05 cintient-0-alpha-5
+-----------------------------
 
-
- 2011-09-05 cintient-0-alpha-5
- =============================
-
-ADDED: Notifo.com user account notifications, as well as an extendable
-       architecture for new notification handlers. Users can configure
-       available notification handlers and can configure per project
-       notifications for specific predetermined events.
-FIXED: Installer is now compatible with PHP 4 and PHP 5.2.
-FIXED: Integration builder issue would report success on certain cases
-       where tasks would generate a fatal error.
-FIXED: Several minor tweaks and improvements.
-
+ *  ADDED: Notifo.com user account notifications, as well as an
+           extendable architecture for new notification handlers. Users
+           can configure available notification handlers and can
+           configure per project notifications for specific
+           predetermined events.
+ *  FIXED: Installer is now compatible with PHP 4 and PHP 5.2.
+ *  FIXED: Integration builder issue would report success on certain
+           cases where tasks would generate a fatal error.
+ *  FIXED: Several minor tweaks and improvements.
   
-  
- 2011-08-19 cintient-0-alpha-4
- =============================
+2011-08-19 cintient-0-alpha-4
+-----------------------------
 
-FIXED: URL handling issues bug squashing.
+ *  FIXED: URL handling issues bug squashing.
